Closed Bug 1712874 Opened 2 years ago Closed 2 years ago

Vertical scrolling in a slight angel causes rubberbanding

Categories

(Core :: Panning and Zooming, defect)

Firefox 90
x86_64
macOS
defect

Tracking

()

VERIFIED FIXED
90 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox88 --- unaffected
firefox89 --- unaffected
firefox90 --- verified

People

(Reporter: alberts, Assigned: botond)

References

(Blocks 1 open bug, Regression, )

Details

(Keywords: regression)

Attachments

(1 file)

Steps

  1. Go to https://www.ifixit.com/Teardown/iMac+M1+24-Inch+Teardown/142850 in a new tab
  2. scroll slowly down ...
    2.1 in a ~15-30º angle - from the center/top of the trackpad to the bottom/left or right corner
    2.2 before reaching the bottom (can even be in the in the middle of the trackpad) stop and release

Expected

No horizontal "rubberbanding"

Actual

On release the content animates back from the same 30º angle, which made me a bit nauseous while reading.

Pushlog

This has only changed a few days ago, see the pushlog
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=c6146f2be8322e2ea021b2d08eb287b26dbc63d5&tochange=24335aad5608d7612d476378fa0e014803248319

Competition

Checking briefly what Safari and Chrome are doing:
Safari is doing something weird; it scrolls only vertically until I stop the motion, only then it jumps a few pixel horizontally. When releasing the track pad, the page jumps horizontally back into position.
Chrome works as Firefox has before that changed a few days ago. It only scrolls vertically. If I increase the angel to over 45º it eventually completely stops the vertical scrolling and starts the rubberband animation horizontally.

FYI, you can also just test it with this page here instead.

Blocks: overscroll
No longer blocks: overscroll-90
Regressed by: 1704080
Has Regression Range: --- → yes

Thanks for the report! I've also heard from Markus and others that the experience introduced by bug 1704080 (which allowed overscrolling in non-scrollable directions) isn't great, so we're going to back it out for now.

In the longer term, we plan to experiment with "dominant axis scrolling" (i.e. not allowing diagonal scrolling, but only using the delta in the direction that's larger), and then we may bring bug 1704080 back.

Set release status flags based on info from the regressing bug 1704080

Assignee: nobody → botond
Status: NEW → ASSIGNED
Pushed by bballo@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/8687a84c1667
Back out bug 1704080 (ability to overscroll is non-scrollable directions). r=tnikkel
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 90 Branch

Thank you Botond for backing them out!

Verified > Fixed on the latest Nightly 90.0a1 (2021-05-30) (20210530214555) on MacOS 11.2.3 and MacOS 11.0.1.

Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.