Bug 1712874 - Back out bug 1704080 (ability to overscroll is non-scrollable directions). r=tnikkel

This reverts all 3 patches from bug 1704080.

Differential Revision: https://phabricator.services.mozilla.com/D116296